# columbia-applied-genai

./: .gitignore  Dockerfile  README.md  pyproject.toml  train_cnn.py  train_mnist_gan.py
Practicals/: Module_3_Practical_1_FCNN.py  Module_3_Practical_2_Convolutions.py  Module_3_Practical_3_CNN.py
app/: cnn_model.py  image_classifier.py  main.py  mnist_gan.py
app/models/: cnn_cifar10.pth  cnn_cifar10_checkpoint.pth
helper_lib/: checkpoints.py  data_loader.py  evaluator.py  model.py  trainer.py  utils.py
